Fixed the input on mobile, display a message when there are no results
I have fixed the input on mobile width, the issue was happening because of a misplaced class that was setting display: none when the width was of a mobile

I am also displaying a message now when there are no search results either

I have also started working on navigation, but I have ran into a blocker and I require some assistance

--- a/src/app/public/components/archive-search/archive-search.component.scss
+++ b/src/app/public/components/archive-search/archive-search.component.scss
@@ -73,9 +73,6 @@ form {
     display: flex;
   }
 
-  .search-box-input:not(.gallery) {
-    display: none;
-  }
 }
 
 :host.search-box-active {
